docs/v0.9.0/_sources/gallery/scattering/square.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/scattering/square.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_scattering_square.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_scattering_square.py:


Square Scatterer
================

Observe the field scattered by one square dielectric inclusion. The animation is
the sole result; detector traces are covered in the Measurements section.

.. GENERATED FROM PYTHON SOURCE LINES 10-46

.. code-block:: Python

    from TypedUnit import ureg
    from MPSPlots.colormaps import polytechnique

    from LightWave2D.grid import Grid
    from LightWave2D.experiment import Experiment

    grid = Grid(
        resolution=0.1 * ureg.micrometer,  # Grid resolution
        size_x=32 * ureg.micrometer,  # Grid size in the x direction
        size_y=16 * ureg.micrometer,  # Grid size in the y direction
        n_steps=500,
    )

    experiment = Experiment(grid=grid)

    scatterer = experiment.add_square(
        position=("25%", "50%"),  # Center position of the scatterer
        epsilon_r=2,  # Relative permittivity of the scatterer
        side_length=5 * ureg.micrometer,  # Side length of the square scatterer
    )

    source = experiment.add_line_source(
        wavelength=1550 * ureg.nanometer,  # Wavelength of the source
        position_0=("10%", "100%"),  # Starting position of the source
        position_1=("10%", "0%"),  # Ending position of the source
        amplitude=10,  # Amplitude of the source
    )

    experiment.add_pml(
        order=1,  # Order of the PML polynomial profile
        width="10%",  # Width of the PML region as a percentage of grid size
        sigma_max=5000 * ureg.siemens / ureg.meter,  # Maximum conductivity for the PML
    )

    experiment.run()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    SimulationResult(Ez_t=array([[[ 0.        ,  0.        ,  0.        , ...,  0.        ,
              0.        ,  0.        ],
            [ 0.        ,  0.        ,  0.        , ...,  0.        ,
              0.        ,  0.        ],
            [ 0.        ,  0.        ,  0.        , ...,  0.        ,
              0.        ,  0.        ],
            ...,
            [ 0.        ,  0.        ,  0.        , ...,  0.        ,
              0.        ,  0.        ],
            [ 0.        ,  0.        ,  0.        , ...,  0.        ,
              0.        ,  0.        ],
            [ 0.        ,  0.        ,  0.        , ...,  0.        ,
              0.        ,  0.        ]],

           [[ 0.        ,  0.        ,  0.        , ...,  0.        ,
              0.        ,  0.        ],
            [ 0.        ,  0.        ,  0.        , ...,  0.        ,
              0.        ,  0.        ],
            [ 0.        ,  0.        ,  0.        , ...,  0.        ,
              0.        ,  0.        ],
            ...,
            [ 0.        ,  0.        ,  0.        , ...,  0.        ,
              0.        ,  0.        ],
            [ 0.        ,  0.        ,  0.        , ...,  0.        ,
              0.        ,  0.        ],
            [ 0.        ,  0.        ,  0.        , ...,  0.        ,
              0.        ,  0.        ]],

           [[ 0.        ,  0.        ,  0.        , ...,  0.        ,
              0.        ,  0.        ],
            [ 0.        ,  0.        ,  0.        , ...,  0.        ,
              0.        ,  0.        ],
            [ 0.        ,  0.        ,  0.        , ...,  0.        ,
              0.        ,  0.        ],
            ...,
            [ 0.        ,  0.        ,  0.        , ...,  0.        ,
              0.        ,  0.        ],
            [ 0.        ,  0.        ,  0.        , ...,  0.        ,
              0.        ,  0.        ],
            [ 0.        ,  0.        ,  0.        , ...,  0.        ,
              0.        ,  0.        ]],

           ...,

           [[ 0.        ,  0.        ,  0.        , ...,  0.        ,
              0.        ,  0.        ],
            [ 0.        ,  0.07145502,  0.1722254 , ...,  0.1722254 ,
              0.07145502,  0.        ],
            [ 0.        ,  0.14638292,  0.31384317, ...,  0.31384317,
              0.14638293,  0.        ],
            ...,
            [ 0.        , -0.05600771, -0.11502945, ..., -0.11502946,
             -0.05600771,  0.        ],
            [ 0.        , -0.04209559, -0.08676283, ..., -0.08676284,
             -0.04209559,  0.        ],
            [ 0.        ,  0.        ,  0.        , ...,  0.        ,
              0.        ,  0.        ]],

           [[ 0.        ,  0.        ,  0.        , ...,  0.        ,
              0.        ,  0.        ],
            [ 0.        ,  0.0937147 ,  0.19730845, ...,  0.19730845,
              0.0937147 ,  0.        ],
            [ 0.        ,  0.18158904,  0.36971996, ...,  0.36971996,
              0.18158905,  0.        ],
            ...,
            [ 0.        , -0.09397538, -0.18993464, ..., -0.18993464,
             -0.09397538,  0.        ],
            [ 0.        , -0.07402428, -0.14517733, ..., -0.14517733,
             -0.07402428,  0.        ],
            [ 0.        ,  0.        ,  0.        , ...,  0.        ,
              0.        ,  0.        ]],

           [[ 0.        ,  0.        ,  0.        , ...,  0.        ,
              0.        ,  0.        ],
            [ 0.        ,  0.11491225,  0.21275996, ...,  0.21275996,
              0.11491226,  0.        ],
            [ 0.        ,  0.20473508,  0.40038779, ...,  0.40038779,
              0.20473509,  0.        ],
            ...,
            [ 0.        , -0.11936664, -0.24020886, ..., -0.24020886,
             -0.11936664,  0.        ],
            [ 0.        , -0.07704155, -0.15079402, ..., -0.15079402,
             -0.07704155,  0.        ],
            [ 0.        ,  0.        ,  0.        , ...,  0.        ,
              0.        ,  0.        ]]], shape=(500, 320, 160)), recorded_time_stamp=<Quantity([0.00000000e+00 2.35865434e-16 4.71730867e-16 7.07596301e-16
     9.43461735e-16 1.17932717e-15 1.41519260e-15 1.65105804e-15
     1.88692347e-15 2.12278890e-15 2.35865434e-15 2.59451977e-15
     2.83038520e-15 3.06625064e-15 3.30211607e-15 3.53798151e-15
     3.77384694e-15 4.00971237e-15 4.24557781e-15 4.48144324e-15
     4.71730867e-15 4.95317411e-15 5.18903954e-15 5.42490497e-15
     5.66077041e-15 5.89663584e-15 6.13250128e-15 6.36836671e-15
     6.60423214e-15 6.84009758e-15 7.07596301e-15 7.31182844e-15
     7.54769388e-15 7.78355931e-15 8.01942474e-15 8.25529018e-15
     8.49115561e-15 8.72702105e-15 8.96288648e-15 9.19875191e-15
     9.43461735e-15 9.67048278e-15 9.90634821e-15 1.01422136e-14
     1.03780791e-14 1.06139445e-14 1.08498099e-14 1.10856754e-14
     1.13215408e-14 1.15574063e-14 1.17932717e-14 1.20291371e-14
     1.22650026e-14 1.25008680e-14 1.27367334e-14 1.29725989e-14
     1.32084643e-14 1.34443297e-14 1.36801952e-14 1.39160606e-14
     1.41519260e-14 1.43877915e-14 1.46236569e-14 1.48595223e-14
     1.50953878e-14 1.53312532e-14 1.55671186e-14 1.58029841e-14
     1.60388495e-14 1.62747149e-14 1.65105804e-14 1.67464458e-14
     1.69823112e-14 1.72181767e-14 1.74540421e-14 1.76899075e-14
     1.79257730e-14 1.81616384e-14 1.83975038e-14 1.86333693e-14
     1.88692347e-14 1.91051001e-14 1.93409656e-14 1.95768310e-14
     1.98126964e-14 2.00485619e-14 2.02844273e-14 2.05202927e-14
     2.07561582e-14 2.09920236e-14 2.12278890e-14 2.14637545e-14
     2.16996199e-14 2.19354853e-14 2.21713508e-14 2.24072162e-14
     2.26430816e-14 2.28789471e-14 2.31148125e-14 2.33506779e-14
     2.35865434e-14 2.38224088e-14 2.40582742e-14 2.42941397e-14
     2.45300051e-14 2.47658705e-14 2.50017360e-14 2.52376014e-14
     2.54734668e-14 2.57093323e-14 2.59451977e-14 2.61810631e-14
     2.64169286e-14 2.66527940e-14 2.68886594e-14 2.71245249e-14
     2.73603903e-14 2.75962557e-14 2.78321212e-14 2.80679866e-14
     2.83038520e-14 2.85397175e-14 2.87755829e-14 2.90114483e-14
     2.92473138e-14 2.94831792e-14 2.97190446e-14 2.99549101e-14
     3.01907755e-14 3.04266409e-14 3.06625064e-14 3.08983718e-14
     3.11342372e-14 3.13701027e-14 3.16059681e-14 3.18418335e-14
     3.20776990e-14 3.23135644e-14 3.25494298e-14 3.27852953e-14
     3.30211607e-14 3.32570261e-14 3.34928916e-14 3.37287570e-14
     3.39646224e-14 3.42004879e-14 3.44363533e-14 3.46722188e-14
     3.49080842e-14 3.51439496e-14 3.53798151e-14 3.56156805e-14
     3.58515459e-14 3.60874114e-14 3.63232768e-14 3.65591422e-14
     3.67950077e-14 3.70308731e-14 3.72667385e-14 3.75026040e-14
     3.77384694e-14 3.79743348e-14 3.82102003e-14 3.84460657e-14
     3.86819311e-14 3.89177966e-14 3.91536620e-14 3.93895274e-14
     3.96253929e-14 3.98612583e-14 4.00971237e-14 4.03329892e-14
     4.05688546e-14 4.08047200e-14 4.10405855e-14 4.12764509e-14
     4.15123163e-14 4.17481818e-14 4.19840472e-14 4.22199126e-14
     4.24557781e-14 4.26916435e-14 4.29275089e-14 4.31633744e-14
     4.33992398e-14 4.36351052e-14 4.38709707e-14 4.41068361e-14
     4.43427015e-14 4.45785670e-14 4.48144324e-14 4.50502978e-14
     4.52861633e-14 4.55220287e-14 4.57578941e-14 4.59937596e-14
     4.62296250e-14 4.64654904e-14 4.67013559e-14 4.69372213e-14
     4.71730867e-14 4.74089522e-14 4.76448176e-14 4.78806830e-14
     4.81165485e-14 4.83524139e-14 4.85882793e-14 4.88241448e-14
     4.90600102e-14 4.92958756e-14 4.95317411e-14 4.97676065e-14
     5.00034719e-14 5.02393374e-14 5.04752028e-14 5.07110682e-14
     5.09469337e-14 5.11827991e-14 5.14186645e-14 5.16545300e-14
     5.18903954e-14 5.21262608e-14 5.23621263e-14 5.25979917e-14
     5.28338571e-14 5.30697226e-14 5.33055880e-14 5.35414534e-14
     5.37773189e-14 5.40131843e-14 5.42490497e-14 5.44849152e-14
     5.47207806e-14 5.49566460e-14 5.51925115e-14 5.54283769e-14
     5.56642423e-14 5.59001078e-14 5.61359732e-14 5.63718386e-14
     5.66077041e-14 5.68435695e-14 5.70794349e-14 5.73153004e-14
     5.75511658e-14 5.77870313e-14 5.80228967e-14 5.82587621e-14
     5.84946276e-14 5.87304930e-14 5.89663584e-14 5.92022239e-14
     5.94380893e-14 5.96739547e-14 5.99098202e-14 6.01456856e-14
     6.03815510e-14 6.06174165e-14 6.08532819e-14 6.10891473e-14
     6.13250128e-14 6.15608782e-14 6.17967436e-14 6.20326091e-14
     6.22684745e-14 6.25043399e-14 6.27402054e-14 6.29760708e-14
     6.32119362e-14 6.34478017e-14 6.36836671e-14 6.39195325e-14
     6.41553980e-14 6.43912634e-14 6.46271288e-14 6.48629943e-14
     6.50988597e-14 6.53347251e-14 6.55705906e-14 6.58064560e-14
     6.60423214e-14 6.62781869e-14 6.65140523e-14 6.67499177e-14
     6.69857832e-14 6.72216486e-14 6.74575140e-14 6.76933795e-14
     6.79292449e-14 6.81651103e-14 6.84009758e-14 6.86368412e-14
     6.88727066e-14 6.91085721e-14 6.93444375e-14 6.95803029e-14
     6.98161684e-14 7.00520338e-14 7.02878992e-14 7.05237647e-14
     7.07596301e-14 7.09954955e-14 7.12313610e-14 7.14672264e-14
     7.17030918e-14 7.19389573e-14 7.21748227e-14 7.24106881e-14
     7.26465536e-14 7.28824190e-14 7.31182844e-14 7.33541499e-14
     7.35900153e-14 7.38258807e-14 7.40617462e-14 7.42976116e-14
     7.45334770e-14 7.47693425e-14 7.50052079e-14 7.52410733e-14
     7.54769388e-14 7.57128042e-14 7.59486696e-14 7.61845351e-14
     7.64204005e-14 7.66562659e-14 7.68921314e-14 7.71279968e-14
     7.73638622e-14 7.75997277e-14 7.78355931e-14 7.80714585e-14
     7.83073240e-14 7.85431894e-14 7.87790548e-14 7.90149203e-14
     7.92507857e-14 7.94866511e-14 7.97225166e-14 7.99583820e-14
     8.01942474e-14 8.04301129e-14 8.06659783e-14 8.09018438e-14
     8.11377092e-14 8.13735746e-14 8.16094401e-14 8.18453055e-14
     8.20811709e-14 8.23170364e-14 8.25529018e-14 8.27887672e-14
     8.30246327e-14 8.32604981e-14 8.34963635e-14 8.37322290e-14
     8.39680944e-14 8.42039598e-14 8.44398253e-14 8.46756907e-14
     8.49115561e-14 8.51474216e-14 8.53832870e-14 8.56191524e-14
     8.58550179e-14 8.60908833e-14 8.63267487e-14 8.65626142e-14
     8.67984796e-14 8.70343450e-14 8.72702105e-14 8.75060759e-14
     8.77419413e-14 8.79778068e-14 8.82136722e-14 8.84495376e-14
     8.86854031e-14 8.89212685e-14 8.91571339e-14 8.93929994e-14
     8.96288648e-14 8.98647302e-14 9.01005957e-14 9.03364611e-14
     9.05723265e-14 9.08081920e-14 9.10440574e-14 9.12799228e-14
     9.15157883e-14 9.17516537e-14 9.19875191e-14 9.22233846e-14
     9.24592500e-14 9.26951154e-14 9.29309809e-14 9.31668463e-14
     9.34027117e-14 9.36385772e-14 9.38744426e-14 9.41103080e-14
     9.43461735e-14 9.45820389e-14 9.48179043e-14 9.50537698e-14
     9.52896352e-14 9.55255006e-14 9.57613661e-14 9.59972315e-14
     9.62330969e-14 9.64689624e-14 9.67048278e-14 9.69406932e-14
     9.71765587e-14 9.74124241e-14 9.76482895e-14 9.78841550e-14
     9.81200204e-14 9.83558858e-14 9.85917513e-14 9.88276167e-14
     9.90634821e-14 9.92993476e-14 9.95352130e-14 9.97710784e-14
     1.00006944e-13 1.00242809e-13 1.00478675e-13 1.00714540e-13
     1.00950406e-13 1.01186271e-13 1.01422136e-13 1.01658002e-13
     1.01893867e-13 1.02129733e-13 1.02365598e-13 1.02601464e-13
     1.02837329e-13 1.03073195e-13 1.03309060e-13 1.03544925e-13
     1.03780791e-13 1.04016656e-13 1.04252522e-13 1.04488387e-13
     1.04724253e-13 1.04960118e-13 1.05195983e-13 1.05431849e-13
     1.05667714e-13 1.05903580e-13 1.06139445e-13 1.06375311e-13
     1.06611176e-13 1.06847041e-13 1.07082907e-13 1.07318772e-13
     1.07554638e-13 1.07790503e-13 1.08026369e-13 1.08262234e-13
     1.08498099e-13 1.08733965e-13 1.08969830e-13 1.09205696e-13
     1.09441561e-13 1.09677427e-13 1.09913292e-13 1.10149158e-13
     1.10385023e-13 1.10620888e-13 1.10856754e-13 1.11092619e-13
     1.11328485e-13 1.11564350e-13 1.11800216e-13 1.12036081e-13
     1.12271946e-13 1.12507812e-13 1.12743677e-13 1.12979543e-13
     1.13215408e-13 1.13451274e-13 1.13687139e-13 1.13923004e-13
     1.14158870e-13 1.14394735e-13 1.14630601e-13 1.14866466e-13
     1.15102332e-13 1.15338197e-13 1.15574063e-13 1.15809928e-13
     1.16045793e-13 1.16281659e-13 1.16517524e-13 1.16753390e-13
     1.16989255e-13 1.17225121e-13 1.17460986e-13 1.17696851e-13], 'second')>, detector_data=array([], shape=(500, 0), dtype=float64), grid=namespace(x_stamp=<Quantity([ 0.   0.1  0.2  0.3  0.4  0.5  0.6  0.7  0.8  0.9  1.   1.1  1.2  1.3
      1.4  1.5  1.6  1.7  1.8  1.9  2.   2.1  2.2  2.3  2.4  2.5  2.6  2.7
      2.8  2.9  3.   3.1  3.2  3.3  3.4  3.5  3.6  3.7  3.8  3.9  4.   4.1
      4.2  4.3  4.4  4.5  4.6  4.7  4.8  4.9  5.   5.1  5.2  5.3  5.4  5.5
      5.6  5.7  5.8  5.9  6.   6.1  6.2  6.3  6.4  6.5  6.6  6.7  6.8  6.9
      7.   7.1  7.2  7.3  7.4  7.5  7.6  7.7  7.8  7.9  8.   8.1  8.2  8.3
      8.4  8.5  8.6  8.7  8.8  8.9  9.   9.1  9.2  9.3  9.4  9.5  9.6  9.7
      9.8  9.9 10.  10.1 10.2 10.3 10.4 10.5 10.6 10.7 10.8 10.9 11.  11.1
     11.2 11.3 11.4 11.5 11.6 11.7 11.8 11.9 12.  12.1 12.2 12.3 12.4 12.5
     12.6 12.7 12.8 12.9 13.  13.1 13.2 13.3 13.4 13.5 13.6 13.7 13.8 13.9
     14.  14.1 14.2 14.3 14.4 14.5 14.6 14.7 14.8 14.9 15.  15.1 15.2 15.3
     15.4 15.5 15.6 15.7 15.8 15.9 16.  16.1 16.2 16.3 16.4 16.5 16.6 16.7
     16.8 16.9 17.  17.1 17.2 17.3 17.4 17.5 17.6 17.7 17.8 17.9 18.  18.1
     18.2 18.3 18.4 18.5 18.6 18.7 18.8 18.9 19.  19.1 19.2 19.3 19.4 19.5
     19.6 19.7 19.8 19.9 20.  20.1 20.2 20.3 20.4 20.5 20.6 20.7 20.8 20.9
     21.  21.1 21.2 21.3 21.4 21.5 21.6 21.7 21.8 21.9 22.  22.1 22.2 22.3
     22.4 22.5 22.6 22.7 22.8 22.9 23.  23.1 23.2 23.3 23.4 23.5 23.6 23.7
     23.8 23.9 24.  24.1 24.2 24.3 24.4 24.5 24.6 24.7 24.8 24.9 25.  25.1
     25.2 25.3 25.4 25.5 25.6 25.7 25.8 25.9 26.  26.1 26.2 26.3 26.4 26.5
     26.6 26.7 26.8 26.9 27.  27.1 27.2 27.3 27.4 27.5 27.6 27.7 27.8 27.9
     28.  28.1 28.2 28.3 28.4 28.5 28.6 28.7 28.8 28.9 29.  29.1 29.2 29.3
     29.4 29.5 29.6 29.7 29.8 29.9 30.  30.1 30.2 30.3 30.4 30.5 30.6 30.7
     30.8 30.9 31.  31.1 31.2 31.3 31.4 31.5 31.6 31.7 31.8 31.9], 'micrometer')>, y_stamp=<Quantity([ 0.   0.1  0.2  0.3  0.4  0.5  0.6  0.7  0.8  0.9  1.   1.1  1.2  1.3
      1.4  1.5  1.6  1.7  1.8  1.9  2.   2.1  2.2  2.3  2.4  2.5  2.6  2.7
      2.8  2.9  3.   3.1  3.2  3.3  3.4  3.5  3.6  3.7  3.8  3.9  4.   4.1
      4.2  4.3  4.4  4.5  4.6  4.7  4.8  4.9  5.   5.1  5.2  5.3  5.4  5.5
      5.6  5.7  5.8  5.9  6.   6.1  6.2  6.3  6.4  6.5  6.6  6.7  6.8  6.9
      7.   7.1  7.2  7.3  7.4  7.5  7.6  7.7  7.8  7.9  8.   8.1  8.2  8.3
      8.4  8.5  8.6  8.7  8.8  8.9  9.   9.1  9.2  9.3  9.4  9.5  9.6  9.7
      9.8  9.9 10.  10.1 10.2 10.3 10.4 10.5 10.6 10.7 10.8 10.9 11.  11.1
     11.2 11.3 11.4 11.5 11.6 11.7 11.8 11.9 12.  12.1 12.2 12.3 12.4 12.5
     12.6 12.7 12.8 12.9 13.  13.1 13.2 13.3 13.4 13.5 13.6 13.7 13.8 13.9
     14.  14.1 14.2 14.3 14.4 14.5 14.6 14.7 14.8 14.9 15.  15.1 15.2 15.3
     15.4 15.5 15.6 15.7 15.8 15.9], 'micrometer')>), components=(<LightWave2D.components.Square object at 0x7fef31112970>,), sources=(<LightWave2D.source.LineWaveSource object at 0x7fef31113b30>,), detectors=(), detector_time_stamp=<Quantity([0.00000000e+00 2.35865434e-16 4.71730867e-16 7.07596301e-16
     9.43461735e-16 1.17932717e-15 1.41519260e-15 1.65105804e-15
     1.88692347e-15 2.12278890e-15 2.35865434e-15 2.59451977e-15
     2.83038520e-15 3.06625064e-15 3.30211607e-15 3.53798151e-15
     3.77384694e-15 4.00971237e-15 4.24557781e-15 4.48144324e-15
     4.71730867e-15 4.95317411e-15 5.18903954e-15 5.42490497e-15
     5.66077041e-15 5.89663584e-15 6.13250128e-15 6.36836671e-15
     6.60423214e-15 6.84009758e-15 7.07596301e-15 7.31182844e-15
     7.54769388e-15 7.78355931e-15 8.01942474e-15 8.25529018e-15
     8.49115561e-15 8.72702105e-15 8.96288648e-15 9.19875191e-15
     9.43461735e-15 9.67048278e-15 9.90634821e-15 1.01422136e-14
     1.03780791e-14 1.06139445e-14 1.08498099e-14 1.10856754e-14
     1.13215408e-14 1.15574063e-14 1.17932717e-14 1.20291371e-14
     1.22650026e-14 1.25008680e-14 1.27367334e-14 1.29725989e-14
     1.32084643e-14 1.34443297e-14 1.36801952e-14 1.39160606e-14
     1.41519260e-14 1.43877915e-14 1.46236569e-14 1.48595223e-14
     1.50953878e-14 1.53312532e-14 1.55671186e-14 1.58029841e-14
     1.60388495e-14 1.62747149e-14 1.65105804e-14 1.67464458e-14
     1.69823112e-14 1.72181767e-14 1.74540421e-14 1.76899075e-14
     1.79257730e-14 1.81616384e-14 1.83975038e-14 1.86333693e-14
     1.88692347e-14 1.91051001e-14 1.93409656e-14 1.95768310e-14
     1.98126964e-14 2.00485619e-14 2.02844273e-14 2.05202927e-14
     2.07561582e-14 2.09920236e-14 2.12278890e-14 2.14637545e-14
     2.16996199e-14 2.19354853e-14 2.21713508e-14 2.24072162e-14
     2.26430816e-14 2.28789471e-14 2.31148125e-14 2.33506779e-14
     2.35865434e-14 2.38224088e-14 2.40582742e-14 2.42941397e-14
     2.45300051e-14 2.47658705e-14 2.50017360e-14 2.52376014e-14
     2.54734668e-14 2.57093323e-14 2.59451977e-14 2.61810631e-14
     2.64169286e-14 2.66527940e-14 2.68886594e-14 2.71245249e-14
     2.73603903e-14 2.75962557e-14 2.78321212e-14 2.80679866e-14
     2.83038520e-14 2.85397175e-14 2.87755829e-14 2.90114483e-14
     2.92473138e-14 2.94831792e-14 2.97190446e-14 2.99549101e-14
     3.01907755e-14 3.04266409e-14 3.06625064e-14 3.08983718e-14
     3.11342372e-14 3.13701027e-14 3.16059681e-14 3.18418335e-14
     3.20776990e-14 3.23135644e-14 3.25494298e-14 3.27852953e-14
     3.30211607e-14 3.32570261e-14 3.34928916e-14 3.37287570e-14
     3.39646224e-14 3.42004879e-14 3.44363533e-14 3.46722188e-14
     3.49080842e-14 3.51439496e-14 3.53798151e-14 3.56156805e-14
     3.58515459e-14 3.60874114e-14 3.63232768e-14 3.65591422e-14
     3.67950077e-14 3.70308731e-14 3.72667385e-14 3.75026040e-14
     3.77384694e-14 3.79743348e-14 3.82102003e-14 3.84460657e-14
     3.86819311e-14 3.89177966e-14 3.91536620e-14 3.93895274e-14
     3.96253929e-14 3.98612583e-14 4.00971237e-14 4.03329892e-14
     4.05688546e-14 4.08047200e-14 4.10405855e-14 4.12764509e-14
     4.15123163e-14 4.17481818e-14 4.19840472e-14 4.22199126e-14
     4.24557781e-14 4.26916435e-14 4.29275089e-14 4.31633744e-14
     4.33992398e-14 4.36351052e-14 4.38709707e-14 4.41068361e-14
     4.43427015e-14 4.45785670e-14 4.48144324e-14 4.50502978e-14
     4.52861633e-14 4.55220287e-14 4.57578941e-14 4.59937596e-14
     4.62296250e-14 4.64654904e-14 4.67013559e-14 4.69372213e-14
     4.71730867e-14 4.74089522e-14 4.76448176e-14 4.78806830e-14
     4.81165485e-14 4.83524139e-14 4.85882793e-14 4.88241448e-14
     4.90600102e-14 4.92958756e-14 4.95317411e-14 4.97676065e-14
     5.00034719e-14 5.02393374e-14 5.04752028e-14 5.07110682e-14
     5.09469337e-14 5.11827991e-14 5.14186645e-14 5.16545300e-14
     5.18903954e-14 5.21262608e-14 5.23621263e-14 5.25979917e-14
     5.28338571e-14 5.30697226e-14 5.33055880e-14 5.35414534e-14
     5.37773189e-14 5.40131843e-14 5.42490497e-14 5.44849152e-14
     5.47207806e-14 5.49566460e-14 5.51925115e-14 5.54283769e-14
     5.56642423e-14 5.59001078e-14 5.61359732e-14 5.63718386e-14
     5.66077041e-14 5.68435695e-14 5.70794349e-14 5.73153004e-14
     5.75511658e-14 5.77870313e-14 5.80228967e-14 5.82587621e-14
     5.84946276e-14 5.87304930e-14 5.89663584e-14 5.92022239e-14
     5.94380893e-14 5.96739547e-14 5.99098202e-14 6.01456856e-14
     6.03815510e-14 6.06174165e-14 6.08532819e-14 6.10891473e-14
     6.13250128e-14 6.15608782e-14 6.17967436e-14 6.20326091e-14
     6.22684745e-14 6.25043399e-14 6.27402054e-14 6.29760708e-14
     6.32119362e-14 6.34478017e-14 6.36836671e-14 6.39195325e-14
     6.41553980e-14 6.43912634e-14 6.46271288e-14 6.48629943e-14
     6.50988597e-14 6.53347251e-14 6.55705906e-14 6.58064560e-14
     6.60423214e-14 6.62781869e-14 6.65140523e-14 6.67499177e-14
     6.69857832e-14 6.72216486e-14 6.74575140e-14 6.76933795e-14
     6.79292449e-14 6.81651103e-14 6.84009758e-14 6.86368412e-14
     6.88727066e-14 6.91085721e-14 6.93444375e-14 6.95803029e-14
     6.98161684e-14 7.00520338e-14 7.02878992e-14 7.05237647e-14
     7.07596301e-14 7.09954955e-14 7.12313610e-14 7.14672264e-14
     7.17030918e-14 7.19389573e-14 7.21748227e-14 7.24106881e-14
     7.26465536e-14 7.28824190e-14 7.31182844e-14 7.33541499e-14
     7.35900153e-14 7.38258807e-14 7.40617462e-14 7.42976116e-14
     7.45334770e-14 7.47693425e-14 7.50052079e-14 7.52410733e-14
     7.54769388e-14 7.57128042e-14 7.59486696e-14 7.61845351e-14
     7.64204005e-14 7.66562659e-14 7.68921314e-14 7.71279968e-14
     7.73638622e-14 7.75997277e-14 7.78355931e-14 7.80714585e-14
     7.83073240e-14 7.85431894e-14 7.87790548e-14 7.90149203e-14
     7.92507857e-14 7.94866511e-14 7.97225166e-14 7.99583820e-14
     8.01942474e-14 8.04301129e-14 8.06659783e-14 8.09018438e-14
     8.11377092e-14 8.13735746e-14 8.16094401e-14 8.18453055e-14
     8.20811709e-14 8.23170364e-14 8.25529018e-14 8.27887672e-14
     8.30246327e-14 8.32604981e-14 8.34963635e-14 8.37322290e-14
     8.39680944e-14 8.42039598e-14 8.44398253e-14 8.46756907e-14
     8.49115561e-14 8.51474216e-14 8.53832870e-14 8.56191524e-14
     8.58550179e-14 8.60908833e-14 8.63267487e-14 8.65626142e-14
     8.67984796e-14 8.70343450e-14 8.72702105e-14 8.75060759e-14
     8.77419413e-14 8.79778068e-14 8.82136722e-14 8.84495376e-14
     8.86854031e-14 8.89212685e-14 8.91571339e-14 8.93929994e-14
     8.96288648e-14 8.98647302e-14 9.01005957e-14 9.03364611e-14
     9.05723265e-14 9.08081920e-14 9.10440574e-14 9.12799228e-14
     9.15157883e-14 9.17516537e-14 9.19875191e-14 9.22233846e-14
     9.24592500e-14 9.26951154e-14 9.29309809e-14 9.31668463e-14
     9.34027117e-14 9.36385772e-14 9.38744426e-14 9.41103080e-14
     9.43461735e-14 9.45820389e-14 9.48179043e-14 9.50537698e-14
     9.52896352e-14 9.55255006e-14 9.57613661e-14 9.59972315e-14
     9.62330969e-14 9.64689624e-14 9.67048278e-14 9.69406932e-14
     9.71765587e-14 9.74124241e-14 9.76482895e-14 9.78841550e-14
     9.81200204e-14 9.83558858e-14 9.85917513e-14 9.88276167e-14
     9.90634821e-14 9.92993476e-14 9.95352130e-14 9.97710784e-14
     1.00006944e-13 1.00242809e-13 1.00478675e-13 1.00714540e-13
     1.00950406e-13 1.01186271e-13 1.01422136e-13 1.01658002e-13
     1.01893867e-13 1.02129733e-13 1.02365598e-13 1.02601464e-13
     1.02837329e-13 1.03073195e-13 1.03309060e-13 1.03544925e-13
     1.03780791e-13 1.04016656e-13 1.04252522e-13 1.04488387e-13
     1.04724253e-13 1.04960118e-13 1.05195983e-13 1.05431849e-13
     1.05667714e-13 1.05903580e-13 1.06139445e-13 1.06375311e-13
     1.06611176e-13 1.06847041e-13 1.07082907e-13 1.07318772e-13
     1.07554638e-13 1.07790503e-13 1.08026369e-13 1.08262234e-13
     1.08498099e-13 1.08733965e-13 1.08969830e-13 1.09205696e-13
     1.09441561e-13 1.09677427e-13 1.09913292e-13 1.10149158e-13
     1.10385023e-13 1.10620888e-13 1.10856754e-13 1.11092619e-13
     1.11328485e-13 1.11564350e-13 1.11800216e-13 1.12036081e-13
     1.12271946e-13 1.12507812e-13 1.12743677e-13 1.12979543e-13
     1.13215408e-13 1.13451274e-13 1.13687139e-13 1.13923004e-13
     1.14158870e-13 1.14394735e-13 1.14630601e-13 1.14866466e-13
     1.15102332e-13 1.15338197e-13 1.15574063e-13 1.15809928e-13
     1.16045793e-13 1.16281659e-13 1.16517524e-13 1.16753390e-13
     1.16989255e-13 1.17225121e-13 1.17460986e-13 1.17696851e-13], 'second')>, flux=(), field_path=None)



.. GENERATED FROM PYTHON SOURCE LINES 47-48

Animate square-scatterer propagation.

.. GENERATED FROM PYTHON SOURCE LINES 48-55

.. code-block:: Python

    animation = experiment.render_propagation(
        skip_frame=5,  # Number of frames to skip in the animation
        colormap=polytechnique.red_black_blue,  # Colormap for the animation
        enhance_contrast=8,  # Enhance contrast for better visualization
        save_as="./square_scatterer.gif",  # Save the animation as a GIF file
        fps=30,
    )



.. image-sg:: /gallery/scattering/images/sphx_glr_square_001.png
   :alt: square
   :srcset: /gallery/scattering/images/sphx_glr_square_001.png
   :class: sphx-glr-single-img






.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 14.471 seconds)


.. _sphx_glr_download_gallery_scattering_square.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: square.ipynb <square.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: square.py <square.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: square.zip <square.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
